--- a/DistFiles/factoryCollections/Templates/Template Maker/basePage.css
+++ b/DistFiles/factoryCollections/Templates/Template Maker/basePage.css
@@ -46,7 +46,7 @@ BODY
 /*+}*/
 BODY
 {
-	font-family: "Andika Basic", "Gentium Basic", "Doulous SIL", Sans-Serif;
+	font-family: "Andika", "Andika Basic", "Gentium Basic", "Gentium Book Basic", "Doulous SIL", Sans-Serif;
 /*Most text in the document should be % changes from this value. Collection.css can then change it to make all the text  bigger.
 Note: the webkit browsers (wkhtml which bloom uses for pdf, and google chrome)
 Need about 2% more space to draw the same text on a ine (can't tell if the font is bigger or the box is smaller)
